force-app/main/default/objects/TFR_Sample__c/TFR_Sample__c.object-meta.xml
<CustomObject>
    <label>TFR Sample</label>
    <nameField>
        <displayFormat>TFRSMP-{00000000}</displayFormat>
        <label>TFR Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>TFR_Sample</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>