force-app/main/default/objects/TFR_Sample__c/fields/Approved_by__c.field-meta.xml
<CustomField>
    <fullName>Approved_by__c</fullName>
    <formula>Job_Card__r.Owner:User.Manager.FirstName + Job_Card__r.Owner:User.Manager.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Approved by</label>
    <type>Text</type>
</CustomField>