force-app/main/default/objects/TFR_Sample__c/fields/Customer_Contact__c.field-meta.xml
<CustomField>
    <fullName>Customer_Contact__c</fullName>
    <formula>Job_Card__r.Contact.FirstName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Contact</label>
    <type>Text</type>
</CustomField>