force-app/main/default/objects/TFR_Sample__c/fields/Date_of_Complaint__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Complaint__c</fullName>
    <label>Date of Complaint</label>
    <type>DateTime</type>
</CustomField>