force-app/main/default/objects/TFR_Sample__c/fields/Date_of_Repair__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Repair__c</fullName>
    <formula>Job_Card__r.CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date of Repair</label>
    <type>Date</type>
</CustomField>