force-app/main/default/objects/TFR_Sample__c/fields/Failure_Code__c.field-meta.xml
<CustomField>
    <fullName>Failure_Code__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Failure Code</label>
    <referenceTo>Failure_Code__c</referenceTo>
    <relationshipName>TFR_Sample</relationshipName>
    <type>Lookup</type>
</CustomField>