force-app/main/default/objects/TFR_Sample__c/fields/Gen_Version__c.field-meta.xml
<CustomField>
    <fullName>Gen_Version__c</fullName>
    <formula>Job_Card__r.Vehicle_Gen_Version__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Gen Version</label>
    <type>Text</type>
</CustomField>