force-app/main/default/objects/TFR_Sample__c/fields/Issue_Severity__c.field-meta.xml
<CustomField>
    <fullName>Issue_Severity__c</fullName>
    <label>Issue Severity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Critical</fullName>
            </value>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>Low</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>