force-app/main/default/objects/TFR_Sample__c/fields/JC_Status__c.field-meta.xml
<CustomField>
    <fullName>JC_Status__c</fullName>
    <label>JC Status</label>
    <length>100</length>
    <type>Text</type>
</CustomField>