force-app/main/default/objects/TFR_Sample__c/fields/Job_Card__c.field-meta.xml
<CustomField>
    <fullName>Job_Card__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Job Card</label>
    <referenceTo>WorkOrder</referenceTo>
    <relationshipName>TFR_Sample</relationshipName>
    <type>Lookup</type>
</CustomField>