force-app/main/default/objects/TFR_Sample__c/fields/Labour_Code__c.field-meta.xml
<CustomField>
    <fullName>Labour_Code__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Labour Code</label>
    <referenceTo>WorkPlan</referenceTo>
    <relationshipLabel>TFR_Sample</relationshipLabel>
    <relationshipName>TFR_Sample</relationshipName>
    <type>Lookup</type>
</CustomField>