force-app/main/default/objects/TFR_Sample__c/fields/LR_Number__c.field-meta.xml
<CustomField>
    <fullName>LR_Number__c</fullName>
    <formula>Part__r.Claim__r.Create_Batch__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>LR Number</label>
    <type>Text</type>
</CustomField>