force-app/main/default/objects/TFR_Sample__c/fields/Media__c.field-meta.xml
<CustomField>
    <fullName>Media__c</fullName>
    <label>Media</label>
    <type>Url</type>
</CustomField>