force-app/main/default/objects/TFR_Sample__c/fields/Odometer_Reading__c.field-meta.xml
<CustomField>
    <fullName>Odometer_Reading__c</fullName>
    <formula>Job_Card__r.Odometer_Reading__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Odometer Reading</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>