force-app/main/default/objects/TFR_Sample__c/fields/Part__c.field-meta.xml
<CustomField>
    <fullName>Part__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Part</label>
    <referenceTo>WorkOrderLineItem</referenceTo>
    <relationshipName>TFR_Sample</relationshipName>
    <type>Lookup</type>
</CustomField>