force-app/main/default/objects/TFR_Sample__c/fields/Pillion__c.field-meta.xml
<CustomField>
    <fullName>Pillion__c</fullName>
    <label>Pillion</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>