force-app/main/default/objects/TFR_Sample__c/fields/Terrain_Type__c.field-meta.xml
<CustomField>
    <fullName>Terrain_Type__c</fullName>
    <label>Terrain Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Mountain</fullName>
            </value>
            <value>
                <fullName>Hill</fullName>
            </value>
            <value>
                <fullName>Plain</fullName>
            </value>
            <value>
                <fullName>Plateau</fullName>
            </value>
            <value>
                <fullName>Desert</fullName>
            </value>
            <value>
                <fullName>Forest</fullName>
            </value>
            <value>
                <fullName>Grassland</fullName>
            </value>
            <value>
                <fullName>Swamp / Marsh</fullName>
            </value>
            <value>
                <fullName>Tundra</fullName>
            </value>
            <value>
                <fullName>Coastal</fullName>
            </value>
            <value>
                <fullName>Urban / Built-up</fullName>
            </value>
            <value>
                <fullName>River / Valley</fullName>
            </value>
            <value>
                <fullName>Volcanic</fullName>
            </value>
            <value>
                <fullName>Glacier / Ice Field</fullName>
            </value>
            <value>
                <fullName>Steppe / Savannah</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>