force-app/main/default/objects/TFR_Sample__c/fields/TFR__c.field-meta.xml
<CustomField>
    <fullName>TFR__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>TFR</label>
    <referenceTo>TFR__c</referenceTo>
    <relationshipName>TFR_Sample</relationshipName>
    <type>Lookup</type>
</CustomField>