force-app/main/default/objects/TFR_Sample__c/fields/TFR_Post_Vin_Cutt_off__c.field-meta.xml
<CustomField>
    <fullName>TFR_Post_Vin_Cutt_off__c</fullName>
    <defaultValue>false</defaultValue>
    <label>TFR Post Vin Cutt off</label>
    <type>Checkbox</type>
</CustomField>