force-app/main/default/objects/TFR_Sample__c/fields/Vehicle_Type__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Type__c</fullName>
    <formula>IF(
    Job_Card__r.RecordType.DeveloperName = &apos;Vehicle_PDI&apos;,
    &apos;Unsold&apos;,
    Job_Card__r.Account.Name
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Vehicle Type</label>
    <type>Text</type>
</CustomField>