force-app/main/default/objects/TFR_Sample__c/fields/VIN_No__c.field-meta.xml
<CustomField>
    <fullName>VIN_No__c</fullName>
    <formula>Job_Card__r.Vehicle_Identification_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>VIN No</label>
    <type>Text</type>
</CustomField>