force-app/main/default/objects/TFR_Sample__c/fields/VOC__c.field-meta.xml
<CustomField>
    <fullName>VOC__c</fullName>
    <label>VOC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>