force-app/main/default/objects/TFR_Sample__c/fields/Warranty_Claim_Number__c.field-meta.xml
<CustomField>
    <fullName>Warranty_Claim_Number__c</fullName>
    <formula>Job_Card__r.VDO_Vehicle_Delivery_Order_No__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Warranty Claim Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>