force-app/main/default/objects/TFR_Sample__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>TFR__c</columns>
    <columns>Failure_Code__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>